sass/stylesheet.scss
/*
  Made with love by @kittywitch ^_^
*/

$light-bg: #fcfcfc;
$light-fg: #333;
$light-code: #eee;
$light-heading: #111;
$dark-bg: #141414;
$dark-fg: #ddd;
$dark-code: #282828;
$dark-heading: #eee;
$link-base: #16b1bd;
$link-hover: #37DCE8;
$link-visited: #3784e8;

* {
  box-sizing: border-box;
}

html {
  color: $dark-fg;
  background: $dark-bg;
  h1, h2, h3 {
    color: $dark-heading;
  }
  code {
    background: $dark-code;
    padding: .5pt 5pt;
    border: $dark-fg 2px solid;
  }
  code:has(pre) {
    display: block;
    width: fit-content;
    margin: 1em 0;
  }
}

body {
    /* Make the body a 80 character wide container */
    max-width: 80ch;
    /* Center the container within the viewport */ 
    margin: 0 auto;
    /* Give the lines an adequate amount of room to breathe. */
    line-height: 1.4;
    /* Make sure the edge of the body has a gap for mobile */
    padding: 1em;
}

/* A kindness to those of you who don't use Javascript */
.nonoscript {
  display: none;
}

#gallery {
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    column-count: 2;
    li {
      img {
      }
    }
  }
}

table {
    /* Wide tables (e.g. pathing status) scroll within themselves instead of overflowing the page on narrow screens */
    display: block;
    overflow-x: auto;
}

img {
    /* Make sure that the images do not overflow the body */
    max-width: 100%;
    /* Make sure that the images are not too tall as to be annoying */
    max-height: 50ch;
}

header nav ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5em;
  li {
    display: inline-block;
    padding: 0;
    margin: 0;
    flex-grow: 1;
    text-align: center;
  }
}

ul.two {
  column-count: 2;
}

a, a:link {
  text-decoration: none;
  color: $link-base;
}

a:visited {
  text-decoration: none;
  color: $link-visited;
}

.netscape-container img {
  width: 88px;
  height: 31px;
}

a:hover {
  text-decoration: none;
  color: $link-hover;
  border-bottom: 0.01rem $link-hover solid;
}

a:hover:has(img) {
  border: none;
  padding: 0.02rem;
  img {
    border: 0.01rem $link-hover solid;
  }
}


/* We want the footer to be like two columns, where the right columns are also right-aligned and the columns grow to share the space sanely. */

footer nav ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: grid;
    grid-template-columns: 1fr 1fr;
    li {
        padding: 0;
        margin: 0;
        &:nth-child(2n) {
            text-align: right;
        }
    }
}

@media (prefers-color-scheme: dark) {
  html {
    color: $dark-fg;
    background: $dark-bg;
    h1, h2, h3 {
      color: $dark-heading;
    }
    code {
      background: $dark-code;
      border: $dark-fg 2px solid;
    }
  }
}

@media (prefers-color-scheme: light) {
  html {
    color: $light-fg;
    background: $light-bg;
    h1, h2, h3 {
      color: $light-heading;
    }
    code {
      background: $light-code;
      border: $light-fg 2px solid;
    }
  }
}

html:has(#color-scheme-dark:checked) {
  color: $dark-fg;
  background: $dark-bg;
  h1, h2, h3 {
    color: $dark-heading;
  }
  code {
    background: $dark-code;
    border: $dark-fg 2px solid;
  }
}

html:has(#color-scheme-light:checked) {
  color: $light-fg;
  background: $light-bg;
  h1, h2, h3 {
    color: $light-heading;
  }
  code {
    background: $light-code;
    border: $light-fg 2px solid;
  }
}

